--- a/Sales-forecasting-Data-science-project.ipynb
+++ b/Sales-forecasting-Data-science-project.ipynb
@@ -717,8 +717,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "741b8d9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of dataframe is (8190, 12)\n",
+      "Below are datatypes of columns in DF\n",
+      "IsHoliday          bool\n",
+      "Store             int64\n",
+      "Temperature     float64\n",
+      "Fuel_Price      float64\n",
+      "MarkDown1       float64\n",
+      "MarkDown2       float64\n",
+      "MarkDown3       float64\n",
+      "MarkDown4       float64\n",
+      "MarkDown5       float64\n",
+      "CPI             float64\n",
+      "Unemployment    float64\n",
+      "Date             object\n",
+      "dtype: object\n",
+      "Below are missing values in each column\n",
+      "Store              0\n",
+      "Date               0\n",
+      "Temperature        0\n",
+      "Fuel_Price         0\n",
+      "IsHoliday          0\n",
+      "CPI              585\n",
+      "Unemployment     585\n",
+      "MarkDown5       4140\n",
+      "MarkDown1       4158\n",
+      "MarkDown3       4577\n",
+      "MarkDown4       4726\n",
+      "MarkDown2       5269\n",
+      "dtype: int64\n",
+      "Below are the number of unique values taken by a column\n",
+      "IsHoliday          2\n",
+      "Store             45\n",
+      "Date             182\n",
+      "Unemployment     404\n",
+      "Fuel_Price      1011\n",
+      "CPI             2505\n",
+      "MarkDown2       2715\n",
+      "MarkDown3       2885\n",
+      "MarkDown4       3405\n",
+      "MarkDown1       4023\n",
+      "MarkDown5       4045\n",
+      "Temperature     4178\n",
+      "dtype: int64\n",
+      "Below are some records in DF\n",
+      "   Store        Date  Temperature  Fuel_Price  MarkDown1  MarkDown2  \\\n",
+      "0      1  2010-02-05        42.31       2.572        NaN        NaN   \n",
+      "1      1  2010-02-12        38.51       2.548        NaN        NaN   \n",
+      "2      1  2010-02-19        39.93       2.514        NaN        NaN   \n",
+      "3      1  2010-02-26        46.63       2.561        NaN        NaN   \n",
+      "4      1  2010-03-05        46.50       2.625        NaN        NaN   \n",
+      "\n",
+      "   MarkDown3  MarkDown4  MarkDown5         CPI  Unemployment  IsHoliday  \n",
+      "0        NaN        NaN        NaN  211.096358         8.106      False  \n",
+      "1        NaN        NaN        NaN  211.242170         8.106       True  \n",
+      "2        NaN        NaN        NaN  211.289143         8.106      False  \n",
+      "3        NaN        NaN        NaN  211.319643         8.106      False  \n",
+      "4        NaN        NaN        NaN  211.350143         8.106      False  \n",
+      "Basic Stats for numeric variables\n",
+      "             Store  Temperature   Fuel_Price      MarkDown1      MarkDown2  \\\n",
+      "count  8190.000000  8190.000000  8190.000000    4032.000000    2921.000000   \n",
+      "mean     23.000000    59.356198     3.405992    7032.371786    3384.176594   \n",
+      "std      12.987966    18.678607     0.431337    9262.747448    8793.583016   \n",
+      "min       1.000000    -7.290000     2.472000   -2781.450000    -265.760000   \n",
+      "25%      12.000000    45.902500     3.041000    1577.532500      68.880000   \n",
+      "50%      23.000000    60.710000     3.513000    4743.580000     364.570000   \n",
+      "75%      34.000000    73.880000     3.743000    8923.310000    2153.350000   \n",
+      "max      45.000000   101.950000     4.468000  103184.980000  104519.540000   \n",
+      "\n",
+      "           MarkDown3     MarkDown4      MarkDown5          CPI  Unemployment  \n",
+      "count    3613.000000   3464.000000    4050.000000  7605.000000   7605.000000  \n",
+      "mean     1760.100180   3292.935886    4132.216422   172.460809      7.826821  \n",
+      "std     11276.462208   6792.329861   13086.690278    39.738346      1.877259  \n",
+      "min      -179.260000      0.220000    -185.170000   126.064000      3.684000  \n",
+      "25%         6.600000    304.687500    1440.827500   132.364839      6.634000  \n",
+      "50%        36.260000   1176.425000    2727.135000   182.764003      7.806000  \n",
+      "75%       163.150000   3310.007500    4832.555000   213.932412      8.567000  \n",
+      "max    149483.310000  67474.850000  771448.100000   228.976456     14.313000  \n"
+     ]
+    }
+   ],
+   "source": [
+    "get_basic_stats(features_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d5aeb95",
    "metadata": {},
    "outputs": [],
    "source": []
